fixed UI centering and spacing issue by wrapping UI with a .wrapper div; welcome page widht now set to 12

--- a/Concept_1/www/thinkCausal.css
+++ b/Concept_1/www/thinkCausal.css
@@ -7,6 +7,12 @@ body {
   font-weight: 300;
 }
 
+.wrapper {
+  max-width: 1280px;
+  margin: auto;
+  display: block;
+}
+
 /* headers */
 h1, h2, h3, h4, h5, h6 {
   color: #525252;
